# story-narrator-api

./: .coveragerc  .env.docker  .env.example  .env.test  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  Readme.md  alembic.ini  coverage.xml  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  coverage.yml
app/: interactive_console.py  main.py
app/application/use_cases/: login_user.py  register_user.py
app/auth/application/decorators/: auth_decorator.py
app/auth/application/use_cases/: login_user.py  register_user.py
app/auth/domain/entities/: user.py
app/auth/domain/exceptions/: user_exceptions.py
app/auth/domain/interfaces/: user_repository.py
app/auth/domain/services/: auth_service.py
app/auth/infrastructure/repositories/: user_repository.py
app/auth/presentation/models/: auth.py
app/auth/presentation/routes/: auth_routes.http  auth_routes.py
app/character/application/use_cases/: create_character.py
app/character/domain/entities/: character.py
app/character/presentation/models/: character.py
app/core/: database.py  dependencies.py  router.py
app/core/docs/: openapi.py
app/core/settings/: config.py
app/domain/interfaces/: user_repository.py
app/domain/services/: auth_service.py
app/infrastructure/repositories/: user_repository.py
app/presentation/routes/: auth_routes.py
migrations/: env.py
migrations/versions/: 51fe2c87092f_added_scenarios_table.py  8ad927fe4534_.py  b53ec2bd9fcd_.py
tests/: conftest.py  test_main.py  test_settings.py
tests/application/use_cases/: test_login_user.py  test_register_user.py
tests/core/: test_database.py
tests/domain/entities/: test_user.py
tests/domain/services/: test_auth_service.py
tests/infrastructure/repositories/: test_user_repository.py
tests/presentation/routes/: conftest.py  test_auth_routes.py
tests/utils/: fakers.py  mocks.py
(+78 files in other folders)
