[project]
name = "story-narrator-backend"
version = "0.1.0"
description = "GenAI for build stories"
authors = [{ name = "Daniel Leal", email = "daniel.leal@bhub.ai" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "fastapi (>=0.115.6,<0.116.0)",
  "uvicorn (>=0.34.0,<0.35.0)",
  "pydantic[email] (>=2.10.5,<3.0.0)",
  "sqlalchemy[asyncio] (>=2.0.37,<3.0.0)",
  "asyncpg (>=0.30.0,<0.31.0)",
  "alembic (>=1.14.0,<2.0.0)",
  "python-dotenv (>=1.0.1,<2.0.0)",
  "greenlet (>=3.1.1,<4.0.0)",
  "passlib (>=1.7.4,<2.0.0)",
  "pyjwt (>=2.10.1,<3.0.0)",
  "asgi-lifespan (>=2.1.0,<3.0.0)",
  "bcrypt (==4.0.1)",
  "factory-boy (>=3.3.1,<4.0.0)",
  "pytest-asyncio (>=0.25.2,<0.26.0)",
  "faker (>=33.3.1,<34.0.0)",
  "psycopg2-binary (>=2.9.10,<3.0.0)",
  "trio (>=0.28.0,<0.29.0)",
  "pytest-sugar (>=1.0.0,<2.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.25.2"
black = "^24.10.0"
isort = "^5.13.2"
mypy = "^1.14.1"
ruff = "^0.9.2"
debugpy = "^1.8.12"
httpx = "^0.28.1"
coverage = "^7.6.10"
pytest-cov = "^6.0.0"
coveralls = "^4.0.1"
gevent = "^24.11.1"

[tool.black]
line-length = 88
target-version = ["py311"]
skip-string-normalization = true

[tool.isort]
profile = "black"
line_length = 88
known_third_party = ["fastapi", "sqlalchemy", "pytest", "alembic"]
known_first_party = ["app"]
combine_as_imports = true

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "C", "N"]
ignore = [
  "E501", # line too long (handled by black)
]
fixable = ["F", "E"]

[tool.pytest.ini_options]
addopts = "--cov=app --cov-report=term --cov-report=xml:coverage.xml"

[tool.coverage.run]
concurrency = ["gevent"]
